[tool.poetry]
name = "td-ameritrade-streamclient"
version = "0.1.0"
description = ""
authors = ["jgansl <jessegansler@gmail.com>"]
readme = "README.md"
packages = [{include = "td_ameritrade_streamclient"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
freezegun = "^1.2.2"
httpx = "^0.24.1"
requests = "^2.31.0"
td-ameritrade-python-api = "^0.3.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
